Move dashboard-specific styles to their own file.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: A visual dashboard for my open source projects
 js_includes:
   - /js/cpan-distributions-list.min.js
   - /js/dashboard.js?v=2016050200
+css_includes:
+  - /css/dashboard.css?v=2016050200
 ---
 
 <!-- Ruby Gems -->
