Add Go packages section.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,53 @@ js_includes:
   - /js/cpan-distributions-list.min.js
   - /js/dashboard.js?v=2016050200
 css_includes:
-  - /css/dashboard.css?v=2016050200
+  - /css/dashboard.css?v=2016050500
 ---
+
+<!-- Go packages -->
+<section id="go_packages">
+	<h3>
+		<a id="GoPackages" class="anchor" href="#GoPackages"></a>
+		Go Packages <span class="count">(1)</span>
+	</h3>
+
+	<table class="list">
+		<thead>
+			<tr>
+				<th class="distribution">Name</th>
+				<th class="links">Links</th>
+				<th class="github_open_issues">Issues</th>
+				<th class="travis_status_badge">Status</th>
+				<th class="coveralls_badge">Tests</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td class="distribution">git-backup</td>
+				<td class="links">
+					<span class="github">
+						<a href="https://github.com/guillaumeaubert/go-git-backup">GitHub</a>
+					</span>
+				</td>
+				<td class="github_open_issues">
+					<a href="https://github.com/guillaumeaubert/go-git-backup/issues">
+						View
+					</a>
+				</td>
+				<td class="travis_status_badge">
+					<a href="https://travis-ci.org/guillaumeaubert/go-git-backup">
+						<img src="https://travis-ci.org/guillaumeaubert/go-git-backup.svg?branch=master" alt='Build Status' />
+					</a>
+				</td>
+				<td class="coveralls_badge">
+					<a href="https://goreportcard.com/report/github.com/guillaumeaubert/go-git-backup">
+						<img src="https://goreportcard.com/badge/github.com/guillaumeaubert/go-git-backup" alt="Go report card" />
+					</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</section>
 
 <!-- Ruby Gems -->
 <section id="ruby_gems">
