--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ css_includes:
 <!-- Ruby Gems -->
 <section id="ruby_gems">
 	<h3>
-		<a id="RubyGems" class="anchor" href="RubyGems"></a>
+		<a id="RubyGems" class="anchor" href="#RubyGems"></a>
 		Ruby Gems <span class="count">(1)</span>
 	</h3>
 
