Clean up anchors.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -42,32 +42,36 @@ css_includes:
 </div>
 
 <h3>
-	<a id="CommitsByMonth" class="anchor" href="#CommitsByMonth"></a>
-	Commits by Month
+	<a id="CommitsByMonth" class="anchor" href="#CommitsByMonth">
+		Commits by Month
+	</a>
 	<span class="count" id="commits_total"></span>
 </h3>
 
 <div id="commits_by_month"></div>
 
 <h3>
-	<a id="CommitsByDay" class="anchor" href="#CommitsByDay"></a>
-	Commits by Day
+	<a id="CommitsByDay" class="anchor" href="#CommitsByDay">
+		Commits by Day
+	</a>
 	<span class="count" id="total_days"></span>
 </h3>
 
 <div id="commits_by_day"></div>
 
 <h3>
-	<a id="CommitsByWeekdayHour" class="anchor" href="#CommitsByWeekdayHour"></a>
-	Commits by Weekday Hour
+	<a id="CommitsByWeekdayHour" class="anchor" href="#CommitsByWeekdayHour">
+		Commits by Weekday Hour
+	</a>
 	<span class="count" id="most_active_weekday_hour"></span>
 </h3>
 
 <div id="commits_by_weekday_hour"></div>
 
 <h3>
-	<a id="CommitsByLanguage" class="anchor" href="#CommitsByLanguage"></a>
-	Commits by Language
+	<a id="CommitsByLanguage" class="anchor" href="#CommitsByLanguage">
+		Commits by Language
+	</a>
 	<span class="count" id="total_languages"></span>
 </h3>
 
@@ -79,8 +83,9 @@ css_includes:
 <div id="commits_by_language"></div>
 
 <h3>
-	<a id="LinesChangedByMonth" class="anchor" href="#LinesChangedByMonth"></a>
-	Lines Changed by Month
+	<a id="LinesChangedByMonth" class="anchor" href="#LinesChangedByMonth">
+		Lines Changed by Month
+	</a>
 	<span class="count" id="total_lines_changed"></span>
 </h3>
 
