Clean up markup.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -8,7 +8,7 @@ css_includes:
   - /css/git_contributions_statistics.css
 ---
 <div id="overview">
-	<span class="list_head">Jump to:</span>
+	<h4>Jump to:</h4>
 	<ul>
 		<li>
 			<a href="#CommitsByMonth">Commits by month</a>
@@ -27,7 +27,7 @@ css_includes:
 		</li>
 	</ul>
 
-	<span class="list_head">Notes:</span>
+	<h4>Notes:</h4>
 	<ul>
 		<li>Hover above interesting data points for more information.</li>
 		<li>
