--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -3,10 +3,15 @@ layout: default
 title: Interesting statistics about my open source git commits
 js_includes:
   - /js/d3.v4.min.js
-  - /js/git_contributions_statistics.js?v=2016050200
+  - /js/git_contributions_statistics.js?v=2017032600
 css_includes:
-  - /css/git_contributions_statistics.css
+  - /css/git_contributions_statistics.css?v=2017032600
 ---
+<div id="metadata">
+	(generated at <span id="metadata_started_at"></span>
+	by analyzing <span id="metadata_repositories_count"></span> repositories
+	in <span id="metadata_time_spent"></span> seconds)
+</div>
 <div id="overview">
 	<h4>Jump to:</h4>
 	<ul>
