--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -25,7 +25,7 @@ css_includes:
 			<a href="#CommitsByWeekdayHour">Commits by weekday hour</a>
 		</li>
 		<li>
-			<a href="#CommitsByLanguage">Commits by language</a>
+			<a href="#CommitsByLanguage">Commits by language / type</a>
 		</li>
 		<li>
 			<a href="#LinesChangedByMonth">Lines changed by month</a>
@@ -75,7 +75,7 @@ css_includes:
 
 <h3>
 	<a id="CommitsByLanguage" class="anchor" href="#CommitsByLanguage">
-		Commits by Language
+		Commits by Language / Type
 	</a>
 	<span class="count" id="total_languages"></span>
 </h3>
