--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: A visual dashboard for my open source projects
 js_includes:
-  - /js/jquery.timeago.js
+  - /js/lib/jquery.timeago-1.5.4.js
   - /js/dashboard.js?v=2017062500
 css_includes:
   - /css/dashboard.css?v=2017062500
