Display project status.
This is more helpful than the date of the last commit, which is still available
as a tooltip over that cell.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 title: A visual dashboard for my open source projects
 js_includes:
   - /js/lib/jquery.timeago-1.5.4.js
-  - /js/dashboard.js?v=2017070200
+  - /js/dashboard.js?v=2017070400
 css_includes:
-  - /css/dashboard.css?v=2017070200
+  - /css/dashboard.css?v=2017070400
 ---
 
 <section>
@@ -14,7 +14,7 @@ css_includes:
 			<tr>
 				<th class="name">Name</th>
 				<th class="links">Links</th>
-				<th class="last-commit">Last Commit</th>
+				<th class="status">Status</th>
 				<th class="badges">Badges</th>
 			</tr>
 		</thead>
