Make labels clickable.

--- a/vertical_posting.html
+++ b/vertical_posting.html
@@ -16,12 +16,30 @@ css_includes:
 		<div>
 			<h4>Transformations:</h4>
 			<ul>
-				<li><input type="radio" name="style" value="vtop"> V, top</li>
-				<li><input type="radio" name="style" value="vbottom"> V, bottom</li>
-				<li><input type="radio" name="style" value="plus"> Plus</li>
-				<li><input type="radio" name="style" value="stairs"> Stairs</li>
-				<li><input type="radio" name="style" value="slinky"> Slinky</li>
-				<li><input type="radio" name="style" value="nestedv"> Nested Vs</li>
+				<li>
+					<input type="radio" name="style" id="style_vtop" value="vtop">
+					<label for="style_vtop">V, top</label>
+				</li>
+				<li>
+					<input type="radio" name="style" id="style_vbottom" value="vbottom">
+					<label for="style_vbottom">V, bottom</label>
+				</li>
+				<li>
+					<input type="radio" name="style" id="style_plus" value="plus">
+					<label for="style_plus">Plus</label>
+				</li>
+				<li>
+					<input type="radio" name="style" id="style_stairs" value="stairs">
+					<label for="style_stairs">Stairs</label>
+				</li>
+				<li>
+					<input type="radio" name="style" id="style_slinky" value="slinky">
+					<label for="style_slinky">Slinky</label>
+				</li>
+				<li>
+					<input type="radio" name="style" id="style_nestedv" value="nestedv">
+					<label for="style_nestedv">Nested Vs</label>
+				</li>
 			</ul>
 		</div>
 	</div>
