Add square pattern.

--- a/vertical_posting.html
+++ b/vertical_posting.html
@@ -25,6 +25,10 @@ css_includes:
 					<label for="style_vbottom">V, bottom</label>
 				</li>
 				<li>
+					<input type="radio" name="style" id="style_square" value="square">
+					<label for="style_sqaure">Square</label>
+				</li>
+				<li>
 					<input type="radio" name="style" id="style_plus" value="plus">
 					<label for="style_plus">Plus</label>
 				</li>
