Add vertical pattern.

--- a/vertical_posting.html
+++ b/vertical_posting.html
@@ -17,6 +17,10 @@ css_includes:
 			<h4>Transformations:</h4>
 			<ul>
 				<li>
+					<input type="radio" name="style" id="style_vertical" value="vertical">
+					<label for="style_vtop">Vertical</label>
+				</li>
+				<li>
 					<input type="radio" name="style" id="style_vtop" value="vtop">
 					<label for="style_vtop">V, top</label>
 				</li>
