Add tree pattern.

--- a/vertical_posting.html
+++ b/vertical_posting.html
@@ -48,6 +48,10 @@ css_includes:
 					<input type="radio" name="style" id="style_nestedv" value="nestedv">
 					<label for="style_nestedv">Nested Vs</label>
 				</li>
+				<li>
+					<input type="radio" name="style" id="style_tree" value="tree">
+					<label for="style_tree">Tree</label>
+				</li>
 			</ul>
 		</div>
 	</div>
